# caesar

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
caesar-common/: Cargo.toml
caesar-common/src/: error.rs  lib.rs  traits.rs
caesar-common/src/detector/: mod.rs
caesar-common/src/terminal/: mod.rs
caesar-common/src/theme/: resolve.rs
contrib/homebrew/: vidi.rb
contrib/yazi/vidi.yazi/: README.md
src/: lib.rs  main.rs
src/config/: file.rs
src/detector/: extension.rs  mod.rs
src/launcher/: mod.rs  toggle.rs
src/registry/: mod.rs  probe.rs  tools.rs  tools_data.rs  viewer_choice.rs
src/renderer/: html.rs
src/terminal/: detect.rs
src/theme/: resolve.rs
veni/: Cargo.toml
veni/src/: error.rs  input.rs  lib.rs  main.rs  ops.rs  pane.rs  ui.rs
veni/src/app/: mod.rs
vidi/: Cargo.toml
vidi/src/: error.rs  main.rs
vidi/src/config/: file.rs
vidi/src/detector/: mod.rs
vidi/src/terminal/: mod.rs
vidi/src/theme/: mod.rs
