[package]
name = "veni"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "TUI file manager with modal editing and neovim integration"
repository = "https://github.com/ChrisGVE/caesar"

[[bin]]
name = "veni"
path = "src/main.rs"

[dependencies]
caesar-common = { path = "../caesar-common" }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
dirs-next = "2"

[dev-dependencies]
tempfile = "3"
